@@ -4,6 +4,7 @@ date: dd/mm/yyy
   * when adding a topConcept, that concept is add to that scheme as well with skos:inScheme
   * fix NullPointerException in OntologyManager triggered by an attempt to fetch RDF data from an URL that does
     not return a Content-Type
+  * fixed several bugs in the search regarding the use of special characters
   
 version 6.0
 date: 27/06/2019
